# creating-apps

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: create-customer-template.md  create-customer-template.yml
.github/workflows/: create_customer.yml  main.yml
app/: form.py  manifest.yml
app/infra/customer_app/app/: customer_app.py
app/infra/customer_app/app/templates/: landing.html
app/infra/customer_app/deployment/customer_deployment/: Chart.yaml  values.yaml
app/infra/customer_app/deployment/customer_deployment/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml
app/models/: db.py  forms.py
app/templates/: form.html  subbed_form.html
infra/: deploy.py  form_deployment.yaml  form_ingress.yaml  form_service.yaml  update_status.py
infra/customer_app/: Dockerfile  pyproject.toml
infra/customer_app/app/: customer_app.py
infra/customer_app/deployment/customer_deployment/: Chart.yaml  values.yaml
infra/customer_app/deployment/customer_deployment/templates/: configmap.yaml  deployment.yaml  service.yaml
